linking app.js with HTML

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My games</title>
 </head>
 <body>
-
+    <script src="app.js"></script>
     <h1>Game registration system</h1>
     
 </body>
