--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <script src="app.js"></script>
     <h1>Game registration system</h1>
+    <P>OH WOW LOOK AT THIS!</P>
     
 </body>
 </html>
